# japalityecho

./: .gitignore  Cargo.toml  README.md
kernels/cuda/: japalityecho_trim_correct.cu
kernels/hip/: japalityecho_trim_correct.hip.cpp
src/: algorithm.rs  backend.rs  bloom.rs  cuda_runtime.rs  dbg.rs  evaluate.rs  fastq.rs  gpu.rs  history.rs  lib.rs  main.rs  model.rs  paper.rs  process.rs  profile.rs  spectrum.rs  study.rs
tests/: pipeline.rs
