[package]
name = "japalityecho"
version = "0.1.0"
edition = "2024"
description = "JapalityECHO: zero-config, context-aware NGS preprocessing with heterogeneous backend abstractions"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
libloading = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.12"
